Refactor of the registration system