@@ -2,13 +2,23 @@ package net.pedroksl.advanced_ae.datagen;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.function.BiConsumer;
+
+import org.jetbrains.annotations.NotNull;
 
 import net.minecraft.core.HolderLookup;
 import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
-import net.minecraft.world.flag.FeatureFlagSet;
+import net.minecraft.resources.ResourceKey;
+import net.minecraft.world.flag.FeatureFlags;
+import net.minecraft.world.level.storage.loot.LootPool;
+import net.minecraft.world.level.storage.loot.LootTable;
+import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
+import net.minecraft.world.level.storage.loot.predicates.ExplosionCondition;
+import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
+import net.pedroksl.advanced_ae.common.definitions.AAEBlocks;
 
 public class AAELootTableProvider extends LootTableProvider {
 
@@ -24,10 +34,26 @@ public class AAELootTableProvider extends LootTableProvider {
     public static class AAESubProvider extends BlockLootSubProvider {
 
         protected AAESubProvider(HolderLookup.Provider provider) {
-            super(Collections.emptySet(), FeatureFlagSet.of(), provider);
+            super(Set.of(), FeatureFlags.DEFAULT_FLAGS, provider);
         }
 
         @Override
-        protected void generate() {}
+        public void generate(@NotNull BiConsumer<ResourceKey<LootTable>, LootTable.Builder> writer) {
+            generate();
+            map.forEach(writer);
+        }
+
+        @Override
+        public void generate() {
+            for (var block : AAEBlocks.getBlocks()) {
+                add(
+                        block.block(),
+                        LootTable.lootTable()
+                                .withPool(LootPool.lootPool()
+                                        .setRolls(ConstantValue.exactly(1))
+                                        .add(LootItem.lootTableItem(block))
+                                        .when(ExplosionCondition.survivesExplosion())));
+            }
+        }
     }
 }
